--- a/Notebooks/Privacy_first_AI_search_using_LangChain_and_Elasticsearch.ipynb
+++ b/Notebooks/Privacy_first_AI_search_using_LangChain_and_Elasticsearch.ipynb
@@ -139,7 +139,7 @@
       "cell_type": "code",
       "source": [
         "import requests\n",
-        "r= requests.get(\"https://revirevy:mahajanga@aa0a43c3781045ea86054fb5267e6401.us-central1.gcp.cloud.es.io:443\")\n",
+        "r= requests.get(\"https://aa0a43c3781045ea86054fb5267e6401.us-central1.gcp.cloud.es.io:443\")\n",
         "r"
       ],
       "metadata": {
